# 100-exercises-rust

exercises/02_basic_calculator/04_panics/src/: lib.rs
exercises/02_basic_calculator/05_factorial/src/: lib.rs
exercises/02_basic_calculator/06_while/src/: lib.rs
exercises/02_basic_calculator/07_for/src/: lib.rs
exercises/02_basic_calculator/08_overflow/: Cargo.toml
exercises/02_basic_calculator/08_overflow/src/: lib.rs
exercises/02_basic_calculator/10_as_casting/src/: lib.rs
exercises/03_ticket_v1/01_struct/src/: lib.rs
exercises/03_ticket_v1/02_validation/src/: lib.rs
exercises/03_ticket_v1/05_encapsulation/src/: lib.rs
exercises/03_ticket_v1/07_setters/src/: lib.rs
exercises/03_ticket_v1/12_outro/src/: lib.rs
exercises/03_ticket_v1/12_outro/tests/: integration.rs
exercises/04_traits/05_trait_bounds/src/: lib.rs
exercises/04_traits/09_from/src/: lib.rs
exercises/04_traits/10_assoc_vs_generic/src/: lib.rs
exercises/04_traits/12_copy/src/: lib.rs
exercises/04_traits/13_drop/src/: lib.rs
exercises/04_traits/14_outro/src/: lib.rs
exercises/05_ticket_v2/01_enum/src/: lib.rs
exercises/05_ticket_v2/02_match/src/: lib.rs
exercises/05_ticket_v2/04_if_let/src/: lib.rs
exercises/05_ticket_v2/05_nullability/src/: lib.rs
exercises/05_ticket_v2/06_fallibility/src/: lib.rs
exercises/05_ticket_v2/07_unwrap/src/: lib.rs
exercises/05_ticket_v2/08_error_enums/src/: lib.rs
exercises/05_ticket_v2/12_thiserror/: Cargo.toml
exercises/05_ticket_v2/15_outro/: Cargo.toml
exercises/07_threads/09_bounded/: Cargo.toml
(+33 files in other folders)
