[package]
name = "overflow"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1               # Use slightly better optimizations.
overflow-checks=true     # Disable integer overflow checks.


[profile.release]
opt-level = 1               # Use slightly better optimizations.
overflow-checks=true     # Disable integer overflow checks.
[profile.test]
opt-level = 1               # Use slightly better optimizations.
overflow-checks=true     # Disable integer overflow checks.
[profile.bench]
opt-level = 1               # Use slightly better optimizations.
overflow-checks=true     # Disable integer overflow checks.
